Added functions and specs

--- a/Template.html
+++ b/Template.html
@@ -9,21 +9,33 @@
   </head>
   <body>
     <div class="container">
-      <h1>Desscribing Title</h1>
+      <h1>Tic Tac Toe</h1>
 
-      <form id="good name">
-        <div class="form-group">
-          <label for="good label">Form Stuff</label>
-          <input id="good id" type="text" required=""><br>
 
-        </div>
-
-        <button type="submit" class="btn">Find out!</button>
-      </form>
+        <!--********************************-->
+        <div class="play">Start a game</button>
+        <button id="player1" class="player">X</button>
+        <button id="player2" class="player">O</button>
+        
+        <div id="board">
+        <!--*********************top*****************-->
+        <div class="titles left top" id="1">&nbsp;</div>
+        <div class="titles left top" id="2">&nbsp;</div>
+        <div class="titles left top" id="3">&nbsp;</div>
+        <!--*********************middle*****************-->
+        <div class="titles left top" id="4">&nbsp;</div>
+        <div class="titles left top" id="5">&nbsp;</div>
+        <div class="titles left top" id="6">&nbsp;</div>
+        <!--*********************bottom*****************-->
+        <div class="titles left top" id="7">&nbsp;</div>
+        <div class="titles left top" id="8">&nbsp;</div>
+        <div class="titles left top" id="9">&nbsp;</div>
+      </div>
 
       <div id="result">
-        <p>Factorial of <span class="number"></span> is <span class="final"></span>.</p>
+        <p><span class="number"></span></p>
       </div>
+
     </div>
   </body>
 </html>
