--- a/Template.html
+++ b/Template.html
@@ -16,20 +16,28 @@
         <div class="play">Start a game</button>
         <button id="player1" class="player">X</button>
         <button id="player2" class="player">O</button>
-        
-        <div id="board">
-        <!--*********************top*****************-->
-        <div class="titles left top" id="1">&nbsp;</div>
-        <div class="titles left top" id="2">&nbsp;</div>
-        <div class="titles left top" id="3">&nbsp;</div>
-        <!--*********************middle*****************-->
-        <div class="titles left top" id="4">&nbsp;</div>
-        <div class="titles left top" id="5">&nbsp;</div>
-        <div class="titles left top" id="6">&nbsp;</div>
-        <!--*********************bottom*****************-->
-        <div class="titles left top" id="7">&nbsp;</div>
-        <div class="titles left top" id="8">&nbsp;</div>
-        <div class="titles left top" id="9">&nbsp;</div>
+
+      <div id="board">
+        <table>
+          <!--*********************top*****************-->
+          <td id="row1">
+            <td class="square" id="1"></td>
+            <td class="square" id="2"></td>
+            <td class="square" id="3"></td>
+          </td>
+          <!--*********************middle*****************-->
+          <td id="row2">
+            <td class="square" id="4"></td>
+            <td class="square" id="5"></td>
+            <td class="square" id="6"></td>
+          </td>
+          <!--*********************bottom*****************-->
+          <td id="row3">
+            <td class="square" id="7"></td>
+            <td class="square" id="8"></td>
+            <td class="square" id="9"></td>
+          </td>
+        </table>
       </div>
 
       <div id="result">
