--- a/Template.html
+++ b/Template.html
@@ -16,27 +16,28 @@
         <div class="play">Start a game</button>
         <button id="player1" class="player">X</button>
         <button id="player2" class="player">O</button>
+        </div>
 
       <div id="board">
         <table>
           <!--*********************top*****************-->
-          <td id="row1">
+          <tr id="row1">
             <td class="square" id="1"></td>
             <td class="square" id="2"></td>
             <td class="square" id="3"></td>
-          </td>
+          </tr>
           <!--*********************middle*****************-->
-          <td id="row2">
+          <tr id="row2">
             <td class="square" id="4"></td>
             <td class="square" id="5"></td>
             <td class="square" id="6"></td>
-          </td>
+          </tr>
           <!--*********************bottom*****************-->
-          <td id="row3">
+          <tr id="row3">
             <td class="square" id="7"></td>
             <td class="square" id="8"></td>
             <td class="square" id="9"></td>
-          </td>
+          </tr>
         </table>
       </div>
 
