Populate board with bugs

--- a/Template.html
+++ b/Template.html
@@ -14,15 +14,15 @@
 
         <!--********************************-->
         <div class="play">Start a game</button>
-        <button id="player1" class="player">X</button>
-        <button id="player2" class="player">O</button>
+        <button id="player1" class="player">Player 1</button>
+        <button id="player2" class="player">Player 2</button>
         </div>
 
       <div id="board">
         <table>
           <!--*********************top*****************-->
           <tr id="row1">
-            <td class="square" id="1"></td>
+            <td class="square" id="1">$result</td>
             <td class="square" id="2"></td>
             <td class="square" id="3"></td>
           </tr>
